yaml/runonce/cloudflare.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cloudflared
  namespace: slinkylinky
spec:
  serviceName: cloudflared
  replicas: 1
  selector:
    matchLabels:
      app: cloudflared
      version: v1
  template:
    metadata:
      labels:
        app: cloudflared
        version: v1
    spec:
      containers:
        - name: cloudflared
          image: cloudflare/cloudflared:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "100m"
              memory: "200Mi"
            limits:
              cpu: "500m"
              memory: "500Mi"
