yaml/runonce/keycloak.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak
  namespace: slinkylinky
spec:
  serviceName: keycloak
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
      version: v1
  template:
    metadata:
      labels:
        app: keycloak
        version: v1
    spec:
      
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.0.2
          imagePullPolicy: Always
          args: ["start-dev"]
          # volumeMounts: 
          #   - name: sl-keycloak-data
          #     mountPath: /var/lib/postgresql/data
          resources:
            requests:
              cpu: "1000m"
              memory: "1500Mi"
          ports:
            - containerPort: 8080
      # volumes:
      #   - name: sl-keycloak-data
      #     persistentVolumeClaim:
      #       claimName: sl-keycloak-data
