yaml/runonce/postgres.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: slinkylinky
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
      version: v1
  template:
    metadata:
      labels:
        app: postgres
        version: v1
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: namespace
                    operator: In
                    values:
                      - slinkylinky
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: postgres
          image: postgres
          imagePullPolicy: Always
          volumeMounts: 
            - name: sl-postgres-data
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              cpu: "1000m"
              memory: "600Mi"
            limits:
              cpu: "1500m"
              memory: "750Mi"
          ports:
            - containerPort: 5432
      volumes:
        - name: sl-postgres-data
          persistentVolumeClaim:
            claimName: sl-postgres-data
